# askeet_api

./: .env  Cargo.toml  Dockerfile  ReadMe.txt  docker-compose.yml
.github/workflows/: deploy.yml
.sqlx/: query-3f61e229170312324541b601e370b3dbbcdef6e68c32580a8816b94af819c49f.json  query-90421e17e32f8c9995eafc78b3e2065b24b995054db1e096083a9fa5b439eee2.json  query-989d9a74cc5cbe6def7327a1e6d93d30f6cb1097c9b79c73a89ab92c94d7b854.json  query-a898dd02b1a63c76fde81c072a0027ba1d14800bdac1dca8fac8f063470c48b2.json
migrations/: 20260310200110_create_users.sql  20260310202903_fix_users_table.sql  20260311131136_setup_bdd_init.sql  20260413123713_update_categories.sql  20260415100432_update_category.sql
src/: main.rs
src/auth/: extractor.rs
src/config/: mod.rs
src/handlers/: category_handler.rs  login.rs  mod.rs  register.rs  survey.rs  survey_handler.rs  user_handler.rs
src/models/: category.rs  claim.rs  mod.rs  survey.rs  user.rs
src/routes/: category.rs  mod.rs  survey.rs  user.rs
