[package]
name = "askeet_api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
    "uuid",
] }


tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.19.0"

